--- a/index.html
+++ b/index.html
@@ -3,167 +3,142 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Grow a Garden Trade</title>
+  <title>Garden Trade</title>
   <style>
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
-      background: url('https://imgur.com/9fWnWP9.jpg') no-repeat center center fixed;
-      background-size: cover;
+      font-family: 'Segoe UI', sans-serif;
+      background: #87ceeb;
+      overflow: hidden;
     }
-    .overlay {
-      background: rgba(255,255,255,0.9);
+    .login-screen, .main-content {
+      position: absolute;
       width: 100%;
       height: 100%;
-      position: absolute;
-      top: 0;
-      left: 0;
-    }
-    .container {
-      position: relative;
-      padding: 20px;
-      max-width: 900px;
-      margin: auto;
-      margin-top: 60px;
-      background: rgba(255, 255, 255, 0.8);
-      border-radius: 10px;
-    }
-    h1 {
-      text-align: center;
-    }
-    .login {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-    .login input, .login button {
-      padding: 10px;
-      margin: 5px;
-      border-radius: 5px;
-    }
-    .online {
-      margin: 10px 0;
-      text-align: center;
-      font-weight: bold;
-    }
-    .trade-boxes {
       display: flex;
-      justify-content: space-between;
-      background-color: transparent;
+      justify-content: center;
+      align-items: center;
+      background: #87ceeb;
+    }
+    .login-box {
+      background: white;
+      padding: 20px;
+      border-radius: 12px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.2);
+    }
+    .hidden {
+      display: none;
+    }
+    .trade-ui {
+      background: url('https://i.imgur.com/9fWnWP9.jpeg');
+      width: 100vw;
+      height: 100vh;
+      background-size: cover;
+      position: relative;
     }
     .box {
-      background-color: #6b3e1d;
-      width: 45%;
-      padding: 10px;
-      border: 2px solid #3a1e0f;
-      border-radius: 10px;
+      position: absolute;
+      width: 300px;
+      height: 200px;
+      background-color: rgba(70,40,20,0.8);
       color: white;
-    }
-    .box h3 {
-      text-align: center;
-    }
-    .add-button {
-      background-color: gold;
-      border: none;
+      overflow-y: auto;
       padding: 10px;
-      width: 100%;
-      margin-top: 10px;
-      font-weight: bold;
+      border-radius: 10px;
+    }
+    #your-offer {
+      left: 180px;
+      top: 110px;
+    }
+    #their-offer {
+      right: 180px;
+      top: 110px;
+    }
+    .yellow-button {
+      position: absolute;
+      width: 180px;
+      height: 40px;
+      background: gold;
       border-radius: 8px;
-    }
-    .pet-select {
+      bottom: 100px;
       text-align: center;
-      margin-top: 20px;
+      line-height: 40px;
+      font-weight: bold;
+      cursor: pointer;
     }
-    select, .confirm-btn {
-      padding: 10px;
-      border-radius: 5px;
-      margin: 5px;
+    #btn1 {
+      left: 220px;
+    }
+    #btn2 {
+      right: 220px;
+    }
+    .online-counter {
+      position: absolute;
+      top: 10px;
+      right: 20px;
+      color: white;
+      font-size: 18px;
+      font-weight: bold;
+      text-shadow: 1px 1px 2px black;
     }
   </style>
 </head>
 <body>
-  <div class="overlay"></div>
-  <div class="container">
-    <h1>Grow a Garden Trade</h1>
-
-    <div class="login" id="loginForm">
-      <input type="text" id="username" placeholder="Username" />
-      <input type="password" id="password" placeholder="Password" />
+  <div class="login-screen" id="login-screen">
+    <div class="login-box">
+      <h2>Welcome to GardenTrade</h2>
+      <input type="text" id="username" placeholder="Enter your username" /><br /><br />
       <button onclick="login()">Login</button>
     </div>
+  </div>
 
-    <div id="app" style="display:none">
-      <div class="online">Users Online: <span id="usersOnline">2</span></div>
+  <div class="main-content hidden" id="main-content">
+    <div class="trade-ui">
+      <div class="online-counter">Online Users: <span id="onlineCount">1</span></div>
 
-      <div class="trade-boxes">
-        <div class="box">
-          <h3>Your Offer</h3>
-          <ul id="yourItems"></ul>
-          <button class="add-button" onclick="addItem('you')">Add Sheckles</button>
-        </div>
-
-        <div class="box">
-          <h3>@Friend's Offer</h3>
-          <ul id="friendItems"></ul>
-          <button class="add-button" onclick="addItem('friend')">Add Sheckles</button>
-        </div>
+      <div class="box" id="your-offer">
+        <strong>Your Offer</strong>
+        <ul id="your-items"></ul>
       </div>
 
-      <div class="pet-select">
-        <label for="pet">Select Pet:</label>
-        <select id="pet">
-          <option value="Corrupted Kitsune">Corrupted Kitsune</option>
-          <option value="Shadow Golem">Shadow Golem</option>
-          <option value="Golden Sprout">Golden Sprout</option>
-          <option value="Mystic Shroom">Mystic Shroom</option>
-          <option value="Blossom Drake">Blossom Drake</option>
-        </select>
-        <button class="confirm-btn" onclick="confirmItem()">Add to Trade</button>
+      <div class="box" id="their-offer">
+        <strong><span id="userTarget">@User</span>'s Offer</strong>
+        <p>Waiting for other user...</p>
       </div>
+
+      <div class="yellow-button" id="btn1" onclick="addSheckles()">Add Sheckles</div>
+      <div class="yellow-button" id="btn2" onclick="addSheckles()">Add Sheckles</div>
     </div>
   </div>
 
   <script>
-    let usersOnline = 2;
-    let loggedInUser = null;
-
-    const validAccounts = {
-      user1: 'test1',
-      user2: 'test2'
-    };
+    const petList = ["Corrupted Kitsune", "Frost Bloomer", "Golden Sapling", "Sun Sprout", "Ghost Tulip"];
+    const onlineUsers = ["GardenerBro", "PetMaster2000", "SunflowerQueen"];
 
     function login() {
-      const username = document.getElementById("username").value;
-      const password = document.getElementById("password").value;
-      if ((username === 'user1' && password === 'test1') || (username === 'user2' && password === 'test2')) {
-        loggedInUser = username;
-        document.getElementById("loginForm").style.display = 'none';
-        document.getElementById("app").style.display = 'block';
-        usersOnline++;
-        document.getElementById("usersOnline").textContent = usersOnline;
-      } else {
-        alert("Invalid login");
-      }
+      const username = document.getElementById('username').value.trim();
+      if (!username) return alert("Please enter a username.");
+
+      document.getElementById('login-screen').classList.add('hidden');
+      document.getElementById('main-content').classList.remove('hidden');
+
+      const count = Math.floor(Math.random() * 5) + 1;
+      document.getElementById('onlineCount').innerText = count;
+
+      let itemHTML = "";
+      petList.forEach(pet => {
+        const confirmed = confirm(`Do you have '${pet}' in Grow a Garden?`);
+        if (confirmed) {
+          itemHTML += `<li>${pet}</li>`;
+        }
+      });
+      document.getElementById("your-items").innerHTML = itemHTML;
+      const target = onlineUsers[Math.floor(Math.random() * onlineUsers.length)];
+      document.getElementById("userTarget").innerText = "@" + target;
     }
 
-    function confirmItem() {
-      const selectedPet = document.getElementById("pet").value;
-      if (confirm(`Are you sure you have the item '${selectedPet}' in-game?`)) {
-        const ul = loggedInUser === 'user1' ? document.getElementById("yourItems") : document.getElementById("friendItems");
-        const li = document.createElement("li");
-        li.textContent = selectedPet;
-        ul.appendChild(li);
-      }
-    }
-
-    function addItem(who) {
-      const item = prompt("Enter what you want to offer (e.g., 10 Sheckles):");
-      if (item) {
-        const ul = who === 'you' ? document.getElementById("yourItems") : document.getElementById("friendItems");
-        const li = document.createElement("li");
-        li.textContent = item;
-        ul.appendChild(li);
-      }
+    function addSheckles() {
+      alert("You added sheckles to your trade.");
     }
   </script>
 </body>
