--- a/index.html
+++ b/index.html
@@ -1,144 +1,148 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Garden Trade</title>
+  <meta charset="UTF-8">
+  <title>Grow a Garden - Trade Center</title>
   <style>
     body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background: #87ceeb;
-      overflow: hidden;
-    }
-    .login-screen, .main-content {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background: #87ceeb;
-    }
-    .login-box {
-      background: white;
-      padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.2);
-    }
-    .hidden {
-      display: none;
-    }
-    .trade-ui {
-      background: url('https://i.imgur.com/9fWnWP9.jpeg');
-      width: 100vw;
-      height: 100vh;
-      background-size: cover;
-      position: relative;
-    }
-    .box {
-      position: absolute;
-      width: 300px;
-      height: 200px;
-      background-color: rgba(70,40,20,0.8);
-      color: white;
-      overflow-y: auto;
-      padding: 10px;
-      border-radius: 10px;
-    }
-    #your-offer {
-      left: 180px;
-      top: 110px;
-    }
-    #their-offer {
-      right: 180px;
-      top: 110px;
-    }
-    .yellow-button {
-      position: absolute;
-      width: 180px;
-      height: 40px;
-      background: gold;
-      border-radius: 8px;
-      bottom: 100px;
+      font-family: Arial, sans-serif;
+      background-color: #e3f9e5;
       text-align: center;
-      line-height: 40px;
-      font-weight: bold;
+      padding: 20px;
+    }
+
+    .container {
+      background: white;
+      padding: 30px;
+      border-radius: 12px;
+      max-width: 700px;
+      margin: auto;
+      box-shadow: 0 0 20px rgba(0,0,0,0.1);
+    }
+
+    input, button {
+      padding: 10px;
+      margin: 10px;
+      font-size: 16px;
+      border: none;
+      border-radius: 5px;
+    }
+
+    button {
+      background-color: #38a169;
+      color: white;
       cursor: pointer;
     }
-    #btn1 {
-      left: 220px;
+
+    button:hover {
+      background-color: #2f855a;
     }
-    #btn2 {
-      right: 220px;
+
+    .item-list, .trade-slot {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 10px;
+      margin: 10px 0;
     }
-    .online-counter {
-      position: absolute;
-      top: 10px;
-      right: 20px;
-      color: white;
-      font-size: 18px;
-      font-weight: bold;
-      text-shadow: 1px 1px 2px black;
+
+    .item {
+      background: #d0ffd8;
+      border: 1px solid #aaa;
+      border-radius: 8px;
+      padding: 10px 20px;
+      cursor: pointer;
+      transition: transform 0.1s ease-in-out;
+    }
+
+    .item:hover {
+      transform: scale(1.05);
+      background: #b8f5c2;
+    }
+
+    .trade-box {
+      margin: 20px;
+      padding: 15px;
+      background: #f3fff3;
+      border-radius: 10px;
+      border: 2px dashed #ccc;
+    }
+
+    .trade-box h3 {
+      margin-bottom: 10px;
     }
   </style>
 </head>
 <body>
-  <div class="login-screen" id="login-screen">
-    <div class="login-box">
-      <h2>Welcome to GardenTrade</h2>
-      <input type="text" id="username" placeholder="Enter your username" /><br /><br />
+  <div class="container">
+    <h1>🌱 Grow a Garden: Trade Center</h1>
+
+    <div id="login">
+      <input type="text" id="username" placeholder="Enter your Roblox username">
       <button onclick="login()">Login</button>
     </div>
-  </div>
 
-  <div class="main-content hidden" id="main-content">
-    <div class="trade-ui">
-      <div class="online-counter">Online Users: <span id="onlineCount">1</span></div>
-
-      <div class="box" id="your-offer">
-        <strong>Your Offer</strong>
-        <ul id="your-items"></ul>
+    <div id="inventory" style="display:none;">
+      <h2>Your Inventory</h2>
+      <div class="item-list" id="itemList">
+        <!-- Items will be added here -->
       </div>
+      <button onclick="goToTrade()">Go to Trade</button>
+    </div>
 
-      <div class="box" id="their-offer">
-        <strong><span id="userTarget">@User</span>'s Offer</strong>
-        <p>Waiting for other user...</p>
+    <div id="trade" style="display:none;">
+      <h2>Trade Items</h2>
+      <div class="trade-box">
+        <h3>Your Offer</h3>
+        <div class="trade-slot" id="yourOffer"></div>
       </div>
-
-      <div class="yellow-button" id="btn1" onclick="addSheckles()">Add Sheckles</div>
-      <div class="yellow-button" id="btn2" onclick="addSheckles()">Add Sheckles</div>
+      <div class="trade-box">
+        <h3>Their Offer</h3>
+        <div class="trade-slot" id="theirOffer">
+          <div class="item">Add Shekels</div>
+        </div>
+      </div>
+      <button onclick="confirmTrade()">Confirm Trade</button>
     </div>
   </div>
 
   <script>
-    const petList = ["Corrupted Kitsune", "Frost Bloomer", "Golden Sapling", "Sun Sprout", "Ghost Tulip"];
-    const onlineUsers = ["GardenerBro", "PetMaster2000", "SunflowerQueen"];
+    const sampleItems = [
+      "Corrupted Kitsune", "Golden Sprout", "Shekels", "Rainbow Petal", "Dark Bloom", "Mystic Slime"
+    ];
 
     function login() {
-      const username = document.getElementById('username').value.trim();
-      if (!username) return alert("Please enter a username.");
+      const user = document.getElementById("username").value.trim();
+      if (user) {
+        document.getElementById("login").style.display = "none";
+        document.getElementById("inventory").style.display = "block";
 
-      document.getElementById('login-screen').classList.add('hidden');
-      document.getElementById('main-content').classList.remove('hidden');
-
-      const count = Math.floor(Math.random() * 5) + 1;
-      document.getElementById('onlineCount').innerText = count;
-
-      let itemHTML = "";
-      petList.forEach(pet => {
-        const confirmed = confirm(`Do you have '${pet}' in Grow a Garden?`);
-        if (confirmed) {
-          itemHTML += `<li>${pet}</li>`;
-        }
-      });
-      document.getElementById("your-items").innerHTML = itemHTML;
-      const target = onlineUsers[Math.floor(Math.random() * onlineUsers.length)];
-      document.getElementById("userTarget").innerText = "@" + target;
+        const itemList = document.getElementById("itemList");
+        itemList.innerHTML = "";
+        sampleItems.forEach(item => {
+          const div = document.createElement("div");
+          div.className = "item";
+          div.innerText = item;
+          div.onclick = () => addToYourOffer(item);
+          itemList.appendChild(div);
+        });
+      }
     }
 
-    function addSheckles() {
-      alert("You added sheckles to your trade.");
+    function goToTrade() {
+      document.getElementById("inventory").style.display = "none";
+      document.getElementById("trade").style.display = "block";
+    }
+
+    function addToYourOffer(item) {
+      const div = document.createElement("div");
+      div.className = "item";
+      div.innerText = item;
+      document.getElementById("yourOffer").appendChild(div);
+    }
+
+    function confirmTrade() {
+      alert("Are you sure you have these items in-game?");
     }
   </script>
 </body>
