--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Grow a Garden - Trade Center</title>
+  <title>Grow a Garden - Trade & Chat</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -15,12 +15,12 @@
       background: white;
       padding: 30px;
       border-radius: 12px;
-      max-width: 700px;
+      max-width: 800px;
       margin: auto;
       box-shadow: 0 0 20px rgba(0,0,0,0.1);
     }
 
-    input, button {
+    input, button, textarea {
       padding: 10px;
       margin: 10px;
       font-size: 16px;
@@ -68,14 +68,47 @@
       border: 2px dashed #ccc;
     }
 
-    .trade-box h3 {
-      margin-bottom: 10px;
+    .chat-box {
+      text-align: left;
+      margin-top: 30px;
+      padding: 20px;
+      background: #f9f9f9;
+      border-radius: 10px;
+      max-height: 300px;
+      overflow-y: auto;
+      border: 1px solid #ccc;
+    }
+
+    .message {
+      margin-bottom: 15px;
+      background: #e0ffe9;
+      padding: 10px;
+      border-radius: 8px;
+    }
+
+    .reply-btn {
+      background: #4299e1;
+      color: white;
+      font-size: 12px;
+      margin-top: 5px;
+      padding: 4px 8px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    .reply-btn:hover {
+      background: #2b6cb0;
+    }
+
+    .reply-area {
+      margin-top: 10px;
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>🌱 Grow a Garden: Trade Center</h1>
+    <h1>🌱 Grow a Garden: Trade & Chat</h1>
 
     <div id="login">
       <input type="text" id="username" placeholder="Enter your Roblox username">
@@ -84,9 +117,7 @@
 
     <div id="inventory" style="display:none;">
       <h2>Your Inventory</h2>
-      <div class="item-list" id="itemList">
-        <!-- Items will be added here -->
-      </div>
+      <div class="item-list" id="itemList"></div>
       <button onclick="goToTrade()">Go to Trade</button>
     </div>
 
@@ -104,6 +135,13 @@
       </div>
       <button onclick="confirmTrade()">Confirm Trade</button>
     </div>
+
+    <div id="chatSection" style="display:none;">
+      <h2>💬 Global Chat</h2>
+      <div class="chat-box" id="chatBox"></div>
+      <textarea id="chatInput" placeholder="Type your message..." rows="2" style="width:100%;"></textarea>
+      <button onclick="sendMessage()">Send Message</button>
+    </div>
   </div>
 
   <script>
@@ -111,11 +149,16 @@
       "Corrupted Kitsune", "Golden Sprout", "Shekels", "Rainbow Petal", "Dark Bloom", "Mystic Slime"
     ];
 
+    let currentUser = "";
+    let chatMessages = [];
+
     function login() {
       const user = document.getElementById("username").value.trim();
       if (user) {
+        currentUser = user;
         document.getElementById("login").style.display = "none";
         document.getElementById("inventory").style.display = "block";
+        document.getElementById("chatSection").style.display = "block";
 
         const itemList = document.getElementById("itemList");
         itemList.innerHTML = "";
@@ -126,6 +169,8 @@
           div.onclick = () => addToYourOffer(item);
           itemList.appendChild(div);
         });
+
+        renderChat();
       }
     }
 
@@ -143,6 +188,82 @@
 
     function confirmTrade() {
       alert("Are you sure you have these items in-game?");
+    }
+
+    function sendMessage(replyToIndex = null) {
+      const input = document.getElementById("chatInput");
+      const msg = input.value.trim();
+      if (!msg) return;
+
+      const messageData = {
+        user: currentUser,
+        text: msg,
+        replies: []
+      };
+
+      if (replyToIndex !== null) {
+        chatMessages[replyToIndex].replies.push(messageData);
+      } else {
+        chatMessages.push(messageData);
+      }
+
+      input.value = "";
+      renderChat();
+    }
+
+    function renderChat() {
+      const chatBox = document.getElementById("chatBox");
+      chatBox.innerHTML = "";
+
+      chatMessages.forEach((msg, index) => {
+        const msgDiv = document.createElement("div");
+        msgDiv.className = "message";
+        msgDiv.innerHTML = `<strong>${msg.user}:</strong> ${msg.text}<br>`;
+
+        const replyBtn = document.createElement("button");
+        replyBtn.className = "reply-btn";
+        replyBtn.textContent = "Reply";
+        replyBtn.onclick = () => showReplyBox(index, msgDiv);
+        msgDiv.appendChild(replyBtn);
+
+        if (msg.replies && msg.replies.length > 0) {
+          msg.replies.forEach(reply => {
+            const replyDiv = document.createElement("div");
+            replyDiv.className = "message";
+            replyDiv.style.marginLeft = "20px";
+            replyDiv.innerHTML = `<strong>${reply.user} (reply):</strong> ${reply.text}`;
+            msgDiv.appendChild(replyDiv);
+          });
+        }
+
+        chatBox.appendChild(msgDiv);
+      });
+    }
+
+    function showReplyBox(index, parentDiv) {
+      // Prevent duplicate reply boxes
+      if (parentDiv.querySelector('.reply-area')) return;
+
+      const replyArea = document.createElement("div");
+      replyArea.className = "reply-area";
+      replyArea.innerHTML = `
+        <textarea rows="2" style="width:100%;" placeholder="Reply to this message..."></textarea>
+        <button onclick="submitReply(${index}, this)">Send Reply</button>
+      `;
+      parentDiv.appendChild(replyArea);
+    }
+
+    function submitReply(index, btn) {
+      const textarea = btn.previousElementSibling;
+      const replyText = textarea.value.trim();
+      if (!replyText) return;
+
+      chatMessages[index].replies.push({
+        user: currentUser,
+        text: replyText
+      });
+
+      renderChat();
     }
   </script>
 </body>
