--- a/index.html
+++ b/index.html
@@ -1,269 +1,93 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Grow a Garden - Trade & Chat</title>
+  <title>Grow a Garden - Global Chat</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #e3f9e5;
-      text-align: center;
-      padding: 20px;
-    }
-
-    .container {
-      background: white;
-      padding: 30px;
-      border-radius: 12px;
-      max-width: 800px;
-      margin: auto;
-      box-shadow: 0 0 20px rgba(0,0,0,0.1);
-    }
-
-    input, button, textarea {
-      padding: 10px;
-      margin: 10px;
-      font-size: 16px;
-      border: none;
-      border-radius: 5px;
-    }
-
-    button {
-      background-color: #38a169;
-      color: white;
-      cursor: pointer;
-    }
-
-    button:hover {
-      background-color: #2f855a;
-    }
-
-    .item-list, .trade-slot {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 10px;
-      margin: 10px 0;
-    }
-
-    .item {
-      background: #d0ffd8;
-      border: 1px solid #aaa;
-      border-radius: 8px;
-      padding: 10px 20px;
-      cursor: pointer;
-      transition: transform 0.1s ease-in-out;
-    }
-
-    .item:hover {
-      transform: scale(1.05);
-      background: #b8f5c2;
-    }
-
-    .trade-box {
-      margin: 20px;
-      padding: 15px;
-      background: #f3fff3;
-      border-radius: 10px;
-      border: 2px dashed #ccc;
-    }
-
-    .chat-box {
-      text-align: left;
-      margin-top: 30px;
-      padding: 20px;
-      background: #f9f9f9;
-      border-radius: 10px;
-      max-height: 300px;
-      overflow-y: auto;
-      border: 1px solid #ccc;
-    }
-
-    .message {
-      margin-bottom: 15px;
-      background: #e0ffe9;
-      padding: 10px;
-      border-radius: 8px;
-    }
-
-    .reply-btn {
-      background: #4299e1;
-      color: white;
-      font-size: 12px;
-      margin-top: 5px;
-      padding: 4px 8px;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-
-    .reply-btn:hover {
-      background: #2b6cb0;
-    }
-
-    .reply-area {
-      margin-top: 10px;
-    }
+    body { font-family: Arial; background: #e3f9e5; text-align: center; padding: 20px; }
+    .container { background: white; padding: 30px; border-radius: 12px; max-width: 800px; margin: auto; box-shadow: 0 0 20px rgba(0,0,0,0.1); }
+    .chat-box { margin-top: 20px; max-height: 300px; overflow-y: auto; padding: 10px; background: #f3fff3; border-radius: 10px; border: 1px solid #ccc; text-align: left; }
+    .message { margin-bottom: 10px; background: #d0ffd8; padding: 10px; border-radius: 5px; }
+    textarea { width: 100%; padding: 10px; border-radius: 5px; }
+    button { background-color: #38a169; color: white; padding: 10px 20px; border: none; border-radius: 5px; margin-top: 10px; cursor: pointer; }
+    button:hover { background-color: #2f855a; }
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>🌱 Grow a Garden: Trade & Chat</h1>
-
+    <h1>🌱 Grow a Garden - Global Chat</h1>
     <div id="login">
       <input type="text" id="username" placeholder="Enter your Roblox username">
       <button onclick="login()">Login</button>
     </div>
 
-    <div id="inventory" style="display:none;">
-      <h2>Your Inventory</h2>
-      <div class="item-list" id="itemList"></div>
-      <button onclick="goToTrade()">Go to Trade</button>
-    </div>
-
-    <div id="trade" style="display:none;">
-      <h2>Trade Items</h2>
-      <div class="trade-box">
-        <h3>Your Offer</h3>
-        <div class="trade-slot" id="yourOffer"></div>
-      </div>
-      <div class="trade-box">
-        <h3>Their Offer</h3>
-        <div class="trade-slot" id="theirOffer">
-          <div class="item">Add Shekels</div>
-        </div>
-      </div>
-      <button onclick="confirmTrade()">Confirm Trade</button>
-    </div>
-
     <div id="chatSection" style="display:none;">
-      <h2>💬 Global Chat</h2>
+      <h2>💬 Chat</h2>
       <div class="chat-box" id="chatBox"></div>
-      <textarea id="chatInput" placeholder="Type your message..." rows="2" style="width:100%;"></textarea>
+      <textarea id="chatInput" placeholder="Type your message..." rows="2"></textarea>
       <button onclick="sendMessage()">Send Message</button>
     </div>
   </div>
 
+  <!-- Firebase SDKs -->
+  <script src="https://www.gstatic.com/firebasejs/10.4.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.4.0/firebase-database-compat.js"></script>
+
   <script>
-    const sampleItems = [
-      "Corrupted Kitsune", "Golden Sprout", "Shekels", "Rainbow Petal", "Dark Bloom", "Mystic Slime"
-    ];
+    // ✅ Your Firebase config
+    const firebaseConfig = {
+      apiKey: "AIzaSyBRDxGLy4EjiOOrPnVv1KhPZlfcdHv1Gqw",
+      authDomain: "growagardentrade-984b8.firebaseapp.com",
+      databaseURL: "https://growagardentrade-984b8-default-rtdb.firebaseio.com",
+      projectId: "growagardentrade-984b8",
+      storageBucket: "growagardentrade-984b8.firebasestorage.app",
+      messagingSenderId: "483682582157",
+      appId: "1:483682582157:web:e32ffb641bf5dd3d08acc4"
+    };
+
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    const db = firebase.database();
 
     let currentUser = "";
-    let chatMessages = [];
 
     function login() {
       const user = document.getElementById("username").value.trim();
       if (user) {
         currentUser = user;
         document.getElementById("login").style.display = "none";
-        document.getElementById("inventory").style.display = "block";
         document.getElementById("chatSection").style.display = "block";
-
-        const itemList = document.getElementById("itemList");
-        itemList.innerHTML = "";
-        sampleItems.forEach(item => {
-          const div = document.createElement("div");
-          div.className = "item";
-          div.innerText = item;
-          div.onclick = () => addToYourOffer(item);
-          itemList.appendChild(div);
-        });
-
-        renderChat();
+        listenForMessages();
       }
     }
 
-    function goToTrade() {
-      document.getElementById("inventory").style.display = "none";
-      document.getElementById("trade").style.display = "block";
-    }
-
-    function addToYourOffer(item) {
-      const div = document.createElement("div");
-      div.className = "item";
-      div.innerText = item;
-      document.getElementById("yourOffer").appendChild(div);
-    }
-
-    function confirmTrade() {
-      alert("Are you sure you have these items in-game?");
-    }
-
-    function sendMessage(replyToIndex = null) {
+    function sendMessage() {
       const input = document.getElementById("chatInput");
       const msg = input.value.trim();
       if (!msg) return;
 
-      const messageData = {
+      db.ref("messages").push({
         user: currentUser,
         text: msg,
-        replies: []
-      };
-
-      if (replyToIndex !== null) {
-        chatMessages[replyToIndex].replies.push(messageData);
-      } else {
-        chatMessages.push(messageData);
-      }
+        timestamp: Date.now()
+      });
 
       input.value = "";
-      renderChat();
     }
 
-    function renderChat() {
+    function listenForMessages() {
       const chatBox = document.getElementById("chatBox");
-      chatBox.innerHTML = "";
-
-      chatMessages.forEach((msg, index) => {
-        const msgDiv = document.createElement("div");
-        msgDiv.className = "message";
-        msgDiv.innerHTML = `<strong>${msg.user}:</strong> ${msg.text}<br>`;
-
-        const replyBtn = document.createElement("button");
-        replyBtn.className = "reply-btn";
-        replyBtn.textContent = "Reply";
-        replyBtn.onclick = () => showReplyBox(index, msgDiv);
-        msgDiv.appendChild(replyBtn);
-
-        if (msg.replies && msg.replies.length > 0) {
-          msg.replies.forEach(reply => {
-            const replyDiv = document.createElement("div");
-            replyDiv.className = "message";
-            replyDiv.style.marginLeft = "20px";
-            replyDiv.innerHTML = `<strong>${reply.user} (reply):</strong> ${reply.text}`;
-            msgDiv.appendChild(replyDiv);
-          });
+      db.ref("messages").on("value", snapshot => {
+        const messages = snapshot.val();
+        chatBox.innerHTML = "";
+        for (let key in messages) {
+          const msg = messages[key];
+          const div = document.createElement("div");
+          div.className = "message";
+          div.innerHTML = `<strong>${msg.user}:</strong> ${msg.text}`;
+          chatBox.appendChild(div);
         }
-
-        chatBox.appendChild(msgDiv);
+        chatBox.scrollTop = chatBox.scrollHeight;
       });
-    }
-
-    function showReplyBox(index, parentDiv) {
-      // Prevent duplicate reply boxes
-      if (parentDiv.querySelector('.reply-area')) return;
-
-      const replyArea = document.createElement("div");
-      replyArea.className = "reply-area";
-      replyArea.innerHTML = `
-        <textarea rows="2" style="width:100%;" placeholder="Reply to this message..."></textarea>
-        <button onclick="submitReply(${index}, this)">Send Reply</button>
-      `;
-      parentDiv.appendChild(replyArea);
-    }
-
-    function submitReply(index, btn) {
-      const textarea = btn.previousElementSibling;
-      const replyText = textarea.value.trim();
-      if (!replyText) return;
-
-      chatMessages[index].replies.push({
-        user: currentUser,
-        text: replyText
-      });
-
-      renderChat();
     }
   </script>
 </body>
