--- a/index.html
+++ b/index.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Grow a Garden - Global Chat with Replies</title>
+  <title>Grow a Garden - Chat with Avatars + Replies</title>
   <style>
     body { font-family: Arial; background: #e3f9e5; text-align: center; padding: 20px; }
     .container { background: white; padding: 30px; border-radius: 12px; max-width: 800px; margin: auto; box-shadow: 0 0 20px rgba(0,0,0,0.1); }
     .chat-box { margin-top: 20px; max-height: 400px; overflow-y: auto; padding: 10px; background: #f3fff3; border-radius: 10px; border: 1px solid #ccc; text-align: left; }
-    .message { margin-bottom: 15px; background: #d0ffd8; padding: 10px; border-radius: 5px; }
-    .reply { margin-left: 20px; background: #c7f6d6; }
+    .message { margin-bottom: 15px; background: #d0ffd8; padding: 10px; border-radius: 5px; display: flex; align-items: flex-start; gap: 10px; }
+    .reply { margin-left: 40px; background: #c7f6d6; }
+    .avatar { width: 40px; height: 40px; border-radius: 50%; }
     textarea { width: 100%; padding: 10px; border-radius: 5px; }
     button { background-color: #38a169; color: white; padding: 8px 14px; border: none; border-radius: 5px; margin-top: 5px; cursor: pointer; }
     button:hover { background-color: #2f855a; }
     .reply-btn { background-color: #4299e1; }
     .reply-btn:hover { background-color: #2b6cb0; }
     .reply-box { margin-top: 5px; }
+    .msg-content { flex: 1; }
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>🌱 Grow a Garden - Global Chat + Replies</h1>
+    <h1>🌱 Grow a Garden - Global Chat + Avatars</h1>
     <div id="login">
       <input type="text" id="username" placeholder="Enter your Roblox username">
       <button onclick="login()">Login</button>
@@ -36,7 +38,7 @@
   <script src="https://www.gstatic.com/firebasejs/10.4.0/firebase-database-compat.js"></script>
 
   <script>
-    // ✅ Your Firebase config
+    // Firebase config
     const firebaseConfig = {
       apiKey: "AIzaSyBRDxGLy4EjiOOrPnVv1KhPZlfcdHv1Gqw",
       authDomain: "growagardentrade-984b8.firebaseapp.com",
@@ -51,6 +53,10 @@
     const db = firebase.database();
 
     let currentUser = "";
+
+    function getAvatarURL(username) {
+      return `https://www.roblox.com/headshot-thumbnail/image?userName=${username}&width=150&height=150&format=png`;
+    }
 
     function login() {
       const user = document.getElementById("username").value.trim();
@@ -93,24 +99,44 @@
         chatBox.innerHTML = "";
         for (let key in messages) {
           const msg = messages[key];
+
           const msgDiv = document.createElement("div");
           msgDiv.className = "message";
-          msgDiv.innerHTML = `<strong>${msg.user}:</strong> ${msg.text}`;
 
-          // Add reply button
+          const avatar = document.createElement("img");
+          avatar.src = getAvatarURL(msg.user);
+          avatar.className = "avatar";
+
+          const msgContent = document.createElement("div");
+          msgContent.className = "msg-content";
+          msgContent.innerHTML = `<strong>${msg.user}:</strong> ${msg.text}`;
+
           const replyBtn = document.createElement("button");
           replyBtn.textContent = "Reply";
           replyBtn.className = "reply-btn";
           replyBtn.onclick = () => showReplyInput(key, msgDiv);
-          msgDiv.appendChild(replyBtn);
 
-          // Show replies
+          msgContent.appendChild(replyBtn);
+          msgDiv.appendChild(avatar);
+          msgDiv.appendChild(msgContent);
+
+          // Replies
           if (msg.replies) {
             for (let replyKey in msg.replies) {
               const reply = msg.replies[replyKey];
               const replyDiv = document.createElement("div");
               replyDiv.className = "message reply";
-              replyDiv.innerHTML = `<strong>${reply.user} (reply):</strong> ${reply.text}`;
+
+              const replyAvatar = document.createElement("img");
+              replyAvatar.src = getAvatarURL(reply.user);
+              replyAvatar.className = "avatar";
+
+              const replyContent = document.createElement("div");
+              replyContent.className = "msg-content";
+              replyContent.innerHTML = `<strong>${reply.user} (reply):</strong> ${reply.text}`;
+
+              replyDiv.appendChild(replyAvatar);
+              replyDiv.appendChild(replyContent);
               msgDiv.appendChild(replyDiv);
             }
           }
@@ -123,7 +149,6 @@
     }
 
     function showReplyInput(msgKey, parentDiv) {
-      // Don't open multiple reply boxes
       if (parentDiv.querySelector('.reply-box')) return;
 
       const replyContainer = document.createElement("div");
@@ -138,7 +163,7 @@
       submitBtn.textContent = "Send Reply";
       submitBtn.onclick = () => {
         sendReply(msgKey, replyInput.value.trim());
-        listenForMessages(); // Refresh chat
+        listenForMessages();
       };
 
       replyContainer.appendChild(replyInput);
