--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@
 <body>
   <h2>Grow a Garden Global Chat</h2>
   <div id="chat"></div>
-  <input id="username" placeholder="Username" />
   <input id="message" placeholder="Message" />
   <button id="send">Send</button>
 
@@ -84,19 +83,27 @@
     const messagesRef = ref(db, "messages");
 
     const chatDiv = document.getElementById("chat");
-    const usernameInput = document.getElementById("username");
     const messageInput = document.getElementById("message");
     const sendBtn = document.getElementById("send");
+
+    let savedUsername = localStorage.getItem("robloxUsername");
+    if (!savedUsername) {
+      savedUsername = prompt("Enter your Roblox username:");
+      if (savedUsername) {
+        localStorage.setItem("robloxUsername", savedUsername);
+      } else {
+        alert("Username is required to chat.");
+      }
+    }
 
     const messageMap = {};
 
     sendBtn.onclick = () => {
-      const username = usernameInput.value.trim();
       const message = messageInput.value.trim();
-      if (!username || !message) return;
+      if (!savedUsername || !message) return;
 
       push(messagesRef, {
-        username,
+        username: savedUsername,
         message,
         timestamp: Date.now(),
         replyTo: null
@@ -111,10 +118,9 @@
       btn.style.marginLeft = "10px";
       btn.onclick = () => {
         const reply = prompt("Enter your reply:");
-        const username = usernameInput.value.trim();
-        if (reply && username) {
+        if (reply && savedUsername) {
           push(messagesRef, {
-            username,
+            username: savedUsername,
             message: reply,
             timestamp: Date.now(),
             replyTo: key
